# feincms3-downloads

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  biome.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
feincms3_downloads/: checks.py  plugins.py  previews.py
feincms3_downloads/locale/de/LC_MESSAGES/: django.mo  django.po
feincms3_downloads/templates/plugins/: download.html
tests/testapp/: admin.py  models.py  settings.py  test_downloads.py  urls.py  views.py
tests/testapp/templates/: article.html
