[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "feincms3-downloads"
description = "Downloads plugin for feincms3"
readme = "README.rst"
license = { text = "MIT" }
authors = [
  { name = "Matthias Kestenholz", email = "mk@feinheit.ch" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dynamic = [
  "version",
]
dependencies = [
  "django>=3.2",
  "feincms3>=4",
  "pillow",
]
optional-dependencies.tests = [
  "coverage",
]
urls.Homepage = "https://github.com/matthiask/feincms3-downloads/"

[tool.hatch.version]
path = "feincms3_downloads/__init__.py"

[tool.ruff]
target-version = "py38"

fix = true
show-fixes = true
extend-select = [
  # pyflakes, pycodestyle
  "F",
  "E",
  "W",
  # mmcabe
  "C90",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-boolean-trap
  "FBT",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-django
  "DJ",
  # flake8-logging-format
  "G",
  # flake8-pie
  "PIE",
  # flake8-simplify
  "SIM",
  # flake8-gettext
  "INT",
  # pygrep-hooks
  "PGH",
  # pylint
  "PL",
  # unused noqa
  "RUF100",
]
extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # No line length errors
  "E501",
]
per-file-ignores."*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]
mccabe.max-complexity = 15
isort.combine-as-imports = true
isort.lines-after-imports = 2
